--- a/ChildAdoptionSystem/nbproject/private/private.properties
+++ b/ChildAdoptionSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\patil\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
+user.properties.file=C:\\Users\\simra\\AppData\\Roaming\\NetBeans\\12.4\\build.properties
