updating javax.mail 1.4.7

--- a/ChildAdoptionSystem/nbproject/project.properties
+++ b/ChildAdoptionSystem/nbproject/project.properties
@@ -39,17 +39,17 @@ file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\patil\\Downloads\\Ado
 file.reference.jcommon-1.0.23.jar=C:\\Users\\patil\\Downloads\\AdoptionAssist_OG\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\patil\\Downloads\\AdoptionAssist_OG\\jfreechart-1.0.19-swt.jar
 file.reference.jfreechart-1.0.19.jar=C:\\Users\\patil\\Downloads\\AdoptionAssist_OG\\jfreechart-1.0.19.jar
-file.reference.mail.jar=C:\\Users\\patil\\Downloads\\AdoptionAssist_OG\\mail.jar
+file.reference.mail-1.4.7.jar=C:\\Users\\patil\\Downloads\\mail-1.4.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mail.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.activation.jar}:\
     ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.jfreechart-1.0.19-swt.jar}
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
