--- a/ChildAdoptionSystem/nbproject/project.properties
+++ b/ChildAdoptionSystem/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ChildAdoptionSystem
+application.vendor=simra
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,25 @@ dist.jar=${dist.dir}/ChildAdoptionSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ChildAdoptionSystem
+endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\AbsoluteLayout.jar
+file.reference.activation.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\activation.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\db4o-8.0.184.15484-all-java5.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\jfreechart-1.0.19.jar
+file.reference.mail.jar=C:\\Users\\simra\\Downloads\\AdoptionAssist\\AdoptionAssist_OG\\mail.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,11 +87,11 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChildAdoptionSystem
-main.class=childadoptionsystem.ChildAdoptionSystem
+main.class=userinterface.Dialog.BirthMotherHelp
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
