UI refactoring and Validations

--- a/ChildAdoptionSystem/nbproject/project.properties
+++ b/ChildAdoptionSystem/nbproject/project.properties
@@ -33,9 +33,23 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ChildAdoptionSystem
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\AbsoluteLayout.jar
+file.reference.activation.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\activation.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\db4o-8.0.184.15484-all-java5.jar
+file.reference.jcommon-1.0.23.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19-swt.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\jfreechart-1.0.19-swt.jar
+file.reference.jfreechart-1.0.19.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\jfreechart-1.0.19.jar
+file.reference.mail.jar=C:\\Users\\nikhi\\Desktop\\Final_Assignment\\AdoptionAssist\\mail.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.0.19-swt.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -71,7 +85,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ChildAdoptionSystem
-main.class=childadoptionsystem.ChildAdoptionSystem
+main.class=userinterface.MainJFrameFinal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
